style: [#5] css 수정 - css 통일성있게 수정, 주석 처리

--- a/src/.eslintrc
+++ b/src/.eslintrc
@@ -1,1 +1,12 @@
-{ "extends": ["react-app", "plugin:prettier/recommended"] }
+{
+    "extends": [
+      "airbnb", 
+      "plugin:prettier/recommended"
+    ],
+    "rules": {
+      "object-curly-newline": 0
+    },
+    "env": {
+      "browser": true
+    }
+}
